--- a/greedy_function_approximation_a_gradient_boosting_machine.ipynb
+++ b/greedy_function_approximation_a_gradient_boosting_machine.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "79267e60-984d-458b-84fe-a399ffe0b780",
    "metadata": {},
    "outputs": [],
@@ -356,11 +356,9 @@
     "\n",
     "$L(y, F(x)) = L(F^{*}(x), F(x))$.\n",
     "\n",
-    "This loss can output a vector in general, but to keep it simple we have it output a scalar (i.e., a real number). Smaller loss is better (less error).\n",
+    "A smaller loss value is better--less prediction error. We must compute the loss over each $(\\vec{x},y)$ pair. When the losses can be computed in parallel, we call that a univariate loss function. The opposite of this are multivariate losses. For example, see work done by Thorsten <a href=\"https://www.cs.cornell.edu/people/tj/publications/joachims_05a.pdf\">here</a>. Multivariate losses are used (for example) when designing a ranking algorithm.\n",
     "\n",
-    "We need to compute the loss over each $(\\vec{x},y)$ pair. When the losses can be computed in parallel, we call that a univariate loss function. The opposite of this are multivariate losses. For example, see work done by Thorsten <a href=\"https://www.cs.cornell.edu/people/tj/publications/joachims_05a.pdf\">here</a>. Multivariate losses are used when designing a ranking algorithm.\n",
-    "\n",
-    "We want to summarize all these losses. A way to do this is to take a sum or an average. Typically the average loss (could take the sum, but that could become very large) is used.\n",
+    "We want to summarize all these losses. A way to do this is to take a sum or an average. Typically the average loss is used.\n",
     "\n",
     "To get the form you see in this paper, I actually answered this many years ago <a href=\"https://math.stackexchange.com/a/623473/118474\">here</a>. But here it is again:\n",
     "\n",
@@ -408,7 +406,7 @@
    "source": [
     "> A common procedure is to restrict $F(\\bf{x})$ to be a member of a parameterized class of functions $F(\\bf{x}; \\bf{P})$, where $P = \\{P_1, P_2, ...\\}$ is a finite set of parameters whose joint values identify individual class members.\n",
     "\n",
-    "I will give a concrete example here. Take simple linear regression. That takes the form of:\n",
+    "I will give a concrete example here. Take simple linear regression. Its takes the form of:\n",
     "\n",
     "$F(x) = b + mx$\n",
     "\n",
@@ -426,7 +424,7 @@
    "source": [
     "> In this article we focus on \"additive\" expansions of the form $F(\\bf{x}; \\{\\beta_m, \\bf{a}_m\\}_1^M) = \\sum_m \\beta_m h(\\bf{x}; \\bf{a}_m)$\n",
     "\n",
-    "This additive expansion is saying, we have $m$ models that get added together. Each multiplied by a weight of $\\beta_m$. (The $m$ denotes which model we are referring to. There are $m$ of them). Each model is denoted as $h(x; a_m)$. The $a_m$ is telling us each model itself has a set of parameters that need to be estimated from data. And these models do not share parameters (would be interesting to think of use-cases where parameter sharing might be beneficial). Also, I see no reason why each model must keep the same structural form (decision tree vs naive bayes). But in practice, and even in this paper, $h(x; a_m)$ is left to be a decision tree. In the package XGBoost for example, this model is referred to as the _booster_."
+    "This additive expansion is saying, we have $m$ models that get added together. Each multiplied by a weight of $\\beta_m$. (The $m$ denotes which model we are referring to--there are $m$ of them). Each model is denoted as $h(x; a_m)$. The $a_m$ is telling us each model itself has a set of parameters that need to be estimated from data. And these models do not share parameters (would be interesting to think of use-cases where parameter sharing might be beneficial). Also, I see no reason why each model must keep the same structural form (decision tree vs naive bayes). But in practice, and even in this paper, $h(x; a_m)$ is left to be a decision tree. In the package XGBoost for example, $h(x; a_m)$ is referred to as the _booster_."
    ]
   },
   {
@@ -444,7 +442,7 @@
    "id": "306c4ffa-f9ec-42ec-a25f-11b52ba049b1",
    "metadata": {},
    "source": [
-    ">  Such expansions (2) are at the heart of many function approximation methods such as neural networks, radial basis functions, wavelets, and support vector machines. Of special interest here is the case where each of the functions $h(\\bf{x}; \\bf{a}_m)$ is a small regression tree, such as those produced in CART. For a regression tree the parameters $\\bf{a}_m$ are the splitting variables, split locations, and the terminal node means of the individual trees.\n",
+    ">  <i>Such expansions (2) are at the heart of many function approximation methods such as neural networks, radial basis functions, wavelets, and support vector machines. Of special interest here is the case where each of the functions $h(\\bf{x}; \\bf{a}_m)$ is a small regression tree, such as those produced in CART. For a regression tree the parameters $\\bf{a}_m$ are the splitting variables, split locations, and the terminal node means of the individual trees.</i>\n",
     "\n",
     "They mention a bunch of ML models where this type of additive model is applicable. But the one of interest here, is the regression tree (i.e., decision tree). To parameterize this tree, at each node we have to choose a variable and a split point for that variable. So here they are saying that $a_m$ will denote the feature chosen for each node and its split point. We can count the number of parameters. At depth $l$ we will have $2^l$ nodes. So there are:\n",
     "\n",
@@ -461,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e04ed3dd-4f48-4c4f-90e6-cc1ebecd91e2",
    "metadata": {},
    "outputs": [
@@ -471,7 +469,7 @@
        "131070"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,17 +502,22 @@
    "source": [
     "> In general, choosing a parameterized model $F(\\bf{x}; \\bf{P})$ changes the function optimization problem to one of parameter optimization\n",
     "<br />\n",
+    "<br />\n",
     "$P^* = \\text{argmin}_P \\Phi(\\bf{P})$\n",
     "<br />\n",
     "<br />\n",
     "where\n",
+    "<br />\n",
+    "<br />\n",
     "$ \\Phi(P) = E_{y, x} L(y, F(x; P))$\n",
     "<br />\n",
     "<br />\n",
     "and then\n",
+    "<br />\n",
+    "<br />\n",
     "$ F^*(x) = F(x; P^*)$\n",
     "\n",
-    "Yes. In linear regression we (typically) use the loss function of least squares to find the best set of parameters. But the key here is that we fix the structure of the model and optimize over the parameters."
+    "Yes. In linear regression (for example) we use the loss function of least squares to find the best set of parameters. But the key here is that we fix the structure of the model and optimize over the parameters."
    ]
   },
   {
@@ -522,13 +525,13 @@
    "id": "94e9c338-6e1d-4538-a647-d229e224612f",
    "metadata": {},
    "source": [
-    "> For most $F(x; P)$ and L, numerical optimization methods must be applied to solve $P^* = \\text{argmin}_P \\Phi(\\bf{P})$. This often involves expression the solution for the parameters in the form\n",
+    "> <i>For most $F(x; P)$ and L, numerical optimization methods must be applied to solve $P^* = \\text{argmin}_P \\Phi(\\bf{P})$. This often involves expression the solution for the parameters in the form\n",
     "<br />\n",
     "<br />\n",
     "$P^* = \\sum_{m=0}^M p_m$\n",
     "<br />\n",
     "<br />\n",
-    "where $p_0$ is the an initial guess and $\\{ p_m\\}_1^M $ are successive increments (\"steps\" or \"boosts\"), each based on the sequence of preceding steps. The precription for computing each step $p_m$ is defined by the optimization method.\n",
+    "where $p_0$ is the an initial guess and $\\{ p_m\\}_1^M $ are successive increments (\"steps\" or \"boosts\"), each based on the sequence of preceding steps. The precription for computing each step $p_m$ is defined by the optimization method.</i>\n",
     "\n",
     "in neural networks, we leverage gradient descent. The weight parameters get updated at each step by adding a value to them. Sp the final weights learned are a sum of the weight updates from each step. That is: \n",
     "\n",
@@ -550,26 +553,48 @@
    "id": "a1ff3629-30fa-4db8-9e0c-bafbfe1f6a8c",
    "metadata": {},
    "source": [
-    "> Steepest-descent is one of the simplest of the frequently used numerical minimization methods. It defines the increments\n",
+    "> <i>Steepest-descent is one of the simplest of the frequently used numerical minimization methods. It defines the increments $\\{p_m\\}_i^M$ as follows. FIrst the current gradient $g_m$ is computed\n",
+    "<br />\n",
+    "$g_m = \\{g_{jm}\\} = \\{ [\\frac{\\partial \\phi(P)}{\\partial P_j}]_{P = P_{m -1}}\\}$\n",
+    "<br />\n",
+    "where\n",
+    "<br />\n",
+    "$P_{m-1} = \\sum_{i = 0}^{m - 1}p_i$\n",
+    "<br />\n",
+    "The step is taken to be\n",
+    "<br />\n",
+    "$p_m = -\\rho_m g_m$\n",
+    "<br />\n",
+    "where\n",
+    "<br />\n",
+    "$\\rho_ = \\text{argmin}_{\\rho} \\Phi (P_{m -1} - \\rho g_m)$\n",
+    "<br />\n",
+    "The negative gradient $-g_m$ is said to define the \"steepest-descent\" direction and (5) is called the \"line search\" along that direction.</i>\n",
     "\n",
-    "Here, we take the gradient of our loss function with respect to the parameter in context (the $jth$ parameter) for the _mth_ model.\n",
+    "Rememeber, steepest-descent is a special case of gradient descent where the step size ($\\rho$) is taken such that the following function is at its lowest point:\n",
     "\n",
-    "Let's clear this up with some code. Let's apply steepest descent really quick."
+    "$\\Phi (P_{m -1} - \\rho g_m)$\n",
+    "\n",
+    "For a neural network, $P_{m -1}$ would the weight vector before the update is applied. \n",
+    "\n",
+    "We take the gradient of our loss function with respect to the parameter in context (the $jth$ parameter) for the _mth_ model.\n",
+    "\n",
+    "Let's clear this up with some code. For examples sake, I'm going to use a brute force approach and try a bunch of values for the line search."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 6,
    "id": "6f02cefe-6b9e-4fc0-baad-7aac94ce95e4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1174b4d90>]"
+       "[<matplotlib.lines.Line2D at 0x1118c3220>]"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -603,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 7,
    "id": "166df961-f4d7-4954-8a9c-ab90844c4fab",
    "metadata": {},
    "outputs": [],
@@ -615,8 +640,8 @@
     "    grad = grad_f(w)\n",
     "    print(f'Grad value: {grad}')\n",
     "    \n",
-    "    # Dumb brute force approach:\n",
-    "    # try a vector of candidates\n",
+    "    # Brute force approach:\n",
+    "    # try a vector of candidates for line search\n",
     "    if steepest_descent:\n",
     "        step_sizes = np.arange(0, 0.3, step=1e-5)\n",
     "        y = f(w - step_sizes * grad)\n",
@@ -636,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 10,
    "id": "a515d086-ab78-4b07-b481-733585c300f0",
    "metadata": {},
    "outputs": [
@@ -645,16 +670,71 @@
      "output_type": "stream",
      "text": [
       "Step 1\n",
-      "w_before=5.0\n",
-      "Grad value: 0.0\n",
-      "Best step size: 0.0\n",
-      "Convergence reached!\n",
-      "Final value: 5.0\n"
+      "w_before=10.0\n",
+      "Grad value: 10.0\n",
+      "Best step size: 0.29999000000000003\n",
+      "w_after=7.0001\n",
+      "\n",
+      "Step 2\n",
+      "w_before=7.0001\n",
+      "Grad value: 4.0001999999999995\n",
+      "Best step size: 0.29999000000000003\n",
+      "w_after=5.800080002\n",
+      "\n",
+      "Step 3\n",
+      "w_before=5.800080002\n",
+      "Grad value: 1.6001600039999992\n",
+      "Best step size: 0.29999000000000003\n",
+      "w_after=5.32004800240004\n",
+      "\n",
+      "Step 4\n",
+      "w_before=5.32004800240004\n",
+      "Grad value: 0.6400960048000801\n",
+      "Best step size: 0.29999000000000003\n",
+      "w_after=5.128025601920064\n",
+      "\n",
+      "Step 5\n",
+      "w_before=5.128025601920064\n",
+      "Grad value: 0.25605120384012814\n",
+      "Best step size: 0.29999000000000003\n",
+      "w_after=5.051212801280064\n",
+      "\n",
+      "Step 6\n",
+      "w_before=5.051212801280064\n",
+      "Grad value: 0.10242560256012823\n",
+      "Best step size: 0.29999000000000003\n",
+      "w_after=5.020486144768051\n",
+      "\n",
+      "Step 7\n",
+      "w_before=5.020486144768051\n",
+      "Grad value: 0.04097228953610177\n",
+      "Best step size: 0.29999000000000003\n",
+      "w_after=5.008194867630116\n",
+      "\n",
+      "Step 8\n",
+      "w_before=5.008194867630116\n",
+      "Grad value: 0.016389735260231575\n",
+      "Best step size: 0.29999000000000003\n",
+      "w_after=5.003278110949399\n",
+      "\n",
+      "Step 9\n",
+      "w_before=5.003278110949399\n",
+      "Grad value: 0.006556221898797787\n",
+      "Best step size: 0.29999000000000003\n",
+      "w_after=5.001311309941978\n",
+      "\n",
+      "Step 10\n",
+      "w_before=5.001311309941978\n",
+      "Grad value: 0.0026226198839562898\n",
+      "Best step size: 0.29999000000000003\n",
+      "w_after=5.00052455020299\n",
+      "\n",
+      "Final value: 5.00052455020299\n"
      ]
     }
    ],
    "source": [
-    "w = 5.\n",
+    "w = 10.\n",
     "for i in range(10):\n",
     "    print(f'Step {i + 1}')\n",
     "    print(f'w_before={w}')\n",
@@ -670,16 +750,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efdedd3a-31b1-44d8-8fc4-981ee67d57f7",
-   "metadata": {},
-   "source": [
-    "`2. Numerical optimization in function space. Here we take a “nonparametric” approach and apply numerical optimization in function space.\n",
-    "That is, we consider F\u0004x\u0005 evaluated at each point x to be a “parameter” and\n",
-    "seek to minimize`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "426a04ed-1c35-4870-ad99-25cd2ef49407",
    "metadata": {},
    "source": [
@@ -691,22 +761,24 @@
    "id": "f5b159a1-34ee-46b1-98fb-83b9047a5eb3",
    "metadata": {},
    "source": [
-    "`Here we take a “nonparametric” approach and apply numerical optimization in function space.\n",
-    "That is, we consider F\u0004x\u0005 evaluated at each point x to be a “parameter” and\n",
-    "seek to minimize\n",
-    "\u0013\u0004F\u0005 = Ey\u0004 xL\u0004y\u0004 F\u0004x\u0005\u0005 = Ex\u0007Ey\u0004L\u0004y\u0004 F\u0004x\u0005\u0005\u0005 \b x\t\u0004\n",
-    "or equivalently,\n",
-    "φ\u0004F\u0004x\u0005\u0005 = Ey\u0007L\u0004y\u0004 F\u0004x\u0005\u0005 \b x\t`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cf7a4434-fb97-4710-8087-8105488cec70",
-   "metadata": {},
-   "source": [
-    "So the idea is to treat $F(x)$ as a parameter. Earlier we showed that $E_x[E_y [L(y, F(x) | x]]$ But if we are optimizing over for $F(X)$ the only thing that really matter is $E_y [L(y, F(x) | x]$. So to make this explicit, we make a new function called $\\phi$ that takes in the function $F(x)$ and spits out the expected loss averaged over all labels. But this is conditioned on a specific $x$.\n",
+    "> <i>Here we take a \"nonparametric\" approach and apply numerical optimization in function space. That is we consider F(x) evaluated at each point x to be a \"parameter\" and seek to minimize\n",
+    "<br />\n",
+    "<br />\n",
+    "$\\Phi(F) = E_{y,x}L(y, F(x)) = E_x[E_y [L(y, F(x) | x]]$\n",
+    "<br />\n",
+    "<br />\n",
+    "or equivalently\n",
+    "<br />\n",
+    "<br />\n",
+    "$\\Phi(F(x)) = E_y [L(y, F(x) | x]$\n",
+    "<br />\n",
+    "<br />\n",
+    "at each individual x, directly with respect to F(x). \n",
+    "</i>\n",
     "\n",
-    "$\\phi(F(x)) = E_y [L(y, F(x) | x]$"
+    "If we treat each $F(x)$ as a parameter, there leads to an infinite number of parameters (there are an infinite points to evaluate at--assuming an underlying continous function). In practice though, you will only be given a finite number of parameter observations (the training data).\n",
+    "\n",
+    "This is equivalent to instance-based methods (you store the data and use at runtime) in ML. For example, in the nearest neighbor model, you store the data and when picking a point, find the 5 nearest neighbors for example. The data itself ARE the parameters of the model. But the parameters do not need to be estimated, they are just given. "
    ]
   },
   {
@@ -714,10 +786,14 @@
    "id": "36647c6d-57f9-4771-a932-9a5f87575a57",
    "metadata": {},
    "source": [
-    "`at each individual x, directly with respect to F\u0004x\u0005. In function space there are\n",
-    "an infinite number ofsuch parameters, but in data sets (discussed below) only\n",
-    "a finite number F\u0004xi\u0005N\n",
-    "1 are involved.`\n",
+    "> <i>In function space there are an infinite number of such parameters, but in data sets (discussed below) only a finite number $\\{F(x_i)\\}_i^N$ are involved. Following the numerical optimization paradigm we take the solution to be\n",
+    "<br />\n",
+    "<br />\n",
+    "$F^*(x) = \\sum_m f_m(x)$\n",
+    "<br />\n",
+    "<br />\n",
+    "where $f_0(x)$ is an initial guess, and ${f_m(x)}_1^M$ are incremental functions (\"steps\" or \"boosts\") defined by the optimization method.\n",
+    "</i>\n",
     "\n",
     "But we have to do this at each $x$ If we treat $F(x)$ as a parameter, how many parameters are there? Well for each data point, there exists one function we seek that lowers the loss. I see no reason why that function must be unique, but there definitely exists a class of functions that is lowest for a given $x$.\n",
     "\n",
