--- a/greedy_function_approximation_a_gradient_boosting_machine.ipynb
+++ b/greedy_function_approximation_a_gradient_boosting_machine.ipynb
@@ -778,7 +778,7 @@
     "\n",
     "If we treat each $F(x)$ as a parameter, there leads to an infinite number of parameters (there are an infinite points to evaluate at--assuming an underlying continous function). In practice though, you will only be given a finite number of parameter observations (the training data).\n",
     "\n",
-    "This is equivalent to instance-based methods (you store the data and use at runtime) in ML. For example, in the nearest neighbor model, you store the data and when picking a point, find the 5 nearest neighbors for example. The data itself ARE the parameters of the model. But the parameters do not need to be estimated, they are just given. "
+    "This is equivalent to instance-based methods (you store the data and use at runtime) in ML. For example, in the nearest neighbor model, you store the data and when picking a point, find the 5 nearest neighbors for example. The data itself ARE the parameters of the model. But the parameters do not need to be estimated, they are just given. But in this paper, it is not using an instance-based approach, we still want to estimate the function at each point."
    ]
   },
   {
@@ -795,9 +795,11 @@
     "where $f_0(x)$ is an initial guess, and ${f_m(x)}_1^M$ are incremental functions (\"steps\" or \"boosts\") defined by the optimization method.\n",
     "</i>\n",
     "\n",
-    "But we have to do this at each $x$ If we treat $F(x)$ as a parameter, how many parameters are there? Well for each data point, there exists one function we seek that lowers the loss. I see no reason why that function must be unique, but there definitely exists a class of functions that is lowest for a given $x$.\n",
+    "We only have a finite number of function evaluations to compare our predictions to. Remember, this is not an instance-based approach. The (x,y) is not the parameter. We still want to reconstruct it, but how? Well we first take a guess with $f_0(x)$. This first guess is the `base_score` parameter in XGBoost.\n",
     "\n",
-    "The process generating the data would typically be continus across $x$. But in practice, we often get a discrete set of (x,y) pairs. So we get $N$ observations."
+    "But how we do improve from here? Well if are treating the function as a parameter, taking the sum approach like how parameters are estimated makes sense. In the parameter approach, we end up with a final vector of parameters that is then used in our model (which has a fixed structure). Here, we actually end up with the model itself.\n",
+    "\n",
+    "So this is basically an exercise in notation. Everwhere there is a $p$ just replace with $f_m$. In fact, that's essentially what follows next."
    ]
   },
   {
@@ -805,122 +807,81 @@
    "id": "94f1410c-2adb-4807-9ea8-81dd31e9a222",
    "metadata": {},
    "source": [
-    "`Following the numerical optimization\n",
-    "paradigm we take the solution to be\n",
-    "F∗\u0004x\u0005 =\n",
-    "M\n",
-    "m=0\n",
-    "fm\u0004x\u0005\u0004\n",
-    "where f0\u0004x\u0005 is an initial guess, and fm\u0004x\u0005M\n",
-    "1 are incremental functions\n",
-    "(“steps” or “boosts”) defined by the optimization method.`\n",
+    "> <i>For steepest-descent\n",
+    "<br />\n",
+    "<br />\n",
+    "$f_m(x) = -\\rho_m g_m(x)$\n",
+    "<br />\n",
+    "<br />\n",
+    "with\n",
+    "<br />\n",
+    "<br />\n",
+    "$g_m(x) = [\\frac{\\partial \\phi(F(x))}{\\partial F(x)}]_{F(x) = F_{m - 1}(x)} = [\\frac{\\partial E_y [L(y, F(x) | x]}{\\partial F(x)}]_{F(x) = F_{m - 1}(x)}$\n",
+    "<br />\n",
+    "<br />\n",
+    "and\n",
+    "<br />\n",
+    "<br />\n",
+    "$F_{m - 1}(x) = \\sum_{i=0}^{m-1} f_i(x)$\n",
+    "<br />\n",
+    "<br />\n",
+    "Assuming sufficient regularity that one can interchange differentiation and integration, this becomes\n",
+    "<br />\n",
+    "<br />   \n",
+    "$g_m(x) = E_y[\\frac{\\partial L(y, F(x))}{\\partial F(x)}]_{F(x) = F_{m-1}(x)}$\n",
+    "<br />\n",
+    "<br />  \n",
+    "The multiplier $\\rho_m$ in (6) is given by the line search\n",
+    "<br />\n",
+    "<br /> \n",
+    "$\\rho_m = \\text{argmin}_{\\rho_m} E_{y, x} L(y, F_{m - 1}(x) - \\rho_m g_m(x))$\n",
+    "</i>\n",
     "\n",
-    "So this is a reference back to how gradient descent operates. We continually add values to the parameter. So the same will be done for the function we are learning.\n",
+    "Here, $\\rho_m$ is calculated with the line search (the naive implementation we did early), but in a package like XGBoost, it's known as the \"eta\" parameter. AFAIK, it's a hyperparameter this is fixed across all \"boosts\". To make this concrete, let's suppose the loss is MSE:\n",
     "\n",
-    "$F(x) = \\sum_{m=0} f_m(x)$\n",
+    "$L(y, F(x)) = \\frac{1}{2}(y - F(x))^2$\n",
     "\n",
-    "which is similar to:\n",
+    "Taking the partial derivative we get:\n",
     "\n",
-    "$\\vec{w}_{final} = \\sum_{i=0} w_i$\n",
+    "$\\frac{\\partial L(y, F(x))}{\\partial F(x)} = -(y - F(x)) = g(x)$\n",
     "\n",
-    "For parameters we call this \"steps\" and in the context of a function, we call this \"boosts\"."
+    "So when we add the first part\n",
+    "\n",
+    "$f_0(x) + \\rho_1 (y - f_0(x))$\n",
+    "\n",
+    "and the second part:\n",
+    "\n",
+    "$f_0(x) + \\rho_1 (y - f_0(x)) + \\rho_2 (y - (f_0(x) + f_1(x))$\n",
+    "\n",
+    "SO we keep regressing on the residuals"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6cf1bfe7-5cef-4e12-acb8-09da7af51270",
+   "id": "8dc404a9-0870-451d-a12d-1e0f04e6f504",
    "metadata": {},
    "source": [
-    "But how do we determine which $f_m$ to use? We rely on the gradient. So we have:\n",
-    "\n",
-    "$\\phi(F(x)) = E_y [L(y, F(x) | x]$\n",
-    "\n",
-    "Taking the derivative with respect to $F(x)$:\n",
-    "\n",
-    "$\\frac{\\partial \\phi(F(x))}{\\partial F(x)} = \\frac{\\partial E_y [L(y, F(x) | x]}{\\partial F(x)}$\n",
-    "\n",
-    "We evaluate this derivative at $F_{m-1}(x)$\n",
-    "\n",
-    "And so we add the following increment:\n",
-    "\n",
-    "$-\\alpha \\frac{\\partial E_y [L(y, F(x) | x]}{\\partial F(x)}$\n",
-    "\n",
-    ". The alpha is calculated with the line search, we can also set it to a constant (eta parameter in XGBoost)"
+    "# 3 Finite data"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "12101dd4-b330-4b07-bcef-372f97ee5c3e",
+   "id": "9247f6a1-8bf0-4671-991f-ef923fae0292",
    "metadata": {},
    "source": [
-    "`Assuming sufficient regularity that one can interchange differentiation and\n",
-    "integration, this becomes\n",
-    "gm\u0004x\u0005 = Ey\n",
-    "\u0007∂L\u0004y\u0004 F\u0004x\u0005\u0005\n",
-    "∂F\u0004x\u0005 \b x\n",
-    "\b\n",
-    "F\u0004x\u0005=Fm−1\u0004x\u0005\n",
-    "(7) \u0005`\n",
+    "> <i>This nonparametric approach breaks down when the joint distribution of (y, x) is estimated by a finite data sample $\\{y_i, x_i\\}_i^N$. In this case $E_y[. | x]$ cannot be estimated accurately by its data value at each $x_i$, and even if it could, one would like to estimate $F^*(x)$ at x values other than the training sample points. Strength must be borrowed from nearby data points by imposing smoothness on the solution. One way to do this is to assume a parameterized form such as (2) and do parameter optimization as discussed in Section 1.1 to minimize the corresponding data based estimate of expected loss\n",
+    "<br />\n",
+    "<br />\n",
+    "$\\{ \\beta_m, a_m\\}_i^M = \\text{argmin}_{\\beta_m, \\alpha_m} \\sum_{i=1}^N L \\big( y_i, \\sum_m \\beta_m h(x_i; a_m) \\big)$\n",
+    "</i>\n",
     "\n",
-    "TODO: What does assuming sufficient regularity mean?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d58fc391-baf3-48f5-8d8b-798b64c1bb88",
-   "metadata": {},
-   "source": [
-    "# 3 Finite Data\n",
-    "\n",
-    "`This nonparametric approach breaks down when the joint\n",
-    "distribution of \u0004y\u0004 x\u0005 is estimated by a finite data sample yi\u0004 xiN\n",
-    "1 . In this\n",
-    "case Ey\u0007· \b x\t cannot be estimated accurately by its data value at each xi, and\n",
-    "even ifit could, one would like to estimate F∗\u0004x\u0005 at x values other than the\n",
-    "training sample points. Strength must be borrowed from nearby data points\n",
-    "by imposing smoothness on the solution.`\n",
-    "\n",
-    "There are some problems. How do you estimate a conditional when you have a single data point well? And also, what about points not in the training dataset? Well, we could say something about smoothness. That is, when we start to venture off from a given $x$ things don't change rapidly."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "553d8146-0d69-4cbb-bcbc-2d9ad7c0d3f2",
-   "metadata": {},
-   "source": [
-    "`One way to do this is to assume a\n",
-    "parameterized form such as (2) and do parameter optimization as discussed in\n",
-    "Section 1.1 to minimize the corresponding data based estimate ofexpectedm`\n",
-    "\n",
-    "So now the idea is to go back to a parameter optimization problem. The function is assumed to be additive. But we have to estimate each weight for the function and its parameters. Doing this jointly seems really hard when we are adding many such functions. They have a solution for this:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e89d678b-50d9-4ade-8d88-7fc642413505",
-   "metadata": {},
-   "source": [
-    "`In situations where this is infeasible one can try a “greedy stagewise”\n",
-    "approach. For m = 1\u0004 2\u0004\u0005\u0005\u0005\u0004M,`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "86639594-4cf9-4de6-ae82-8269741029a7",
-   "metadata": {},
-   "source": [
-    "`and then\n",
-    "Fm\u0004x\u0005 = Fm−1 (10) \u0004x\u0005 + βmh\u0004x am\u0005\u0005\n",
-    "Note that this stagewise strategy is different from stepwise approaches that\n",
-    "readjust previously entered terms when new ones are added.`\n",
-    "\n",
-    "They reiterate when I had mentioned before. Stagewise vw stepwise. Stagewise just freezes previous terms but stepwise allows for some of them to be adjusted."
+    "This means we are back to assuming a parameterized model!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36518871-3889-4f9f-88f3-1650f243e6fd",
+   "id": "fd24b46b-122b-4480-83e9-0d0175edd6e9",
    "metadata": {},
    "outputs": [],
    "source": []
