--- a/greedy_function_approximation_a_gradient_boosting_machine.ipynb
+++ b/greedy_function_approximation_a_gradient_boosting_machine.ipynb
@@ -579,7 +579,7 @@
     "\n",
     "We take the gradient of our loss function with respect to the parameter in context (the $jth$ parameter) for the _mth_ model.\n",
     "\n",
-    "Let's clear this up with some code. For examples sake, I'm going to use a brute force approach and try a bunch of values for the line search."
+    "💻 Let's clear this up with some code. For examples sake, I'm going to use a brute force approach and try a bunch of values for the line search."
    ]
   },
   {
@@ -776,9 +776,9 @@
     "at each individual x, directly with respect to F(x). \n",
     "</i>\n",
     "\n",
-    "If we treat each $F(x)$ as a parameter, there leads to an infinite number of parameters (there are an infinite points to evaluate at--assuming an underlying continous function). In practice though, you will only be given a finite number of parameter observations (the training data).\n",
+    "If we treat each $F(x)$ as a parameter, there will be as many parameters as there are unique x values. In practice, you will only be given a finite number of parameter observations (the training data).\n",
     "\n",
-    "This is equivalent to instance-based methods (you store the data and use at runtime) in ML. For example, in the nearest neighbor model, you store the data and when picking a point, find the 5 nearest neighbors for example. The data itself ARE the parameters of the model. But the parameters do not need to be estimated, they are just given. But in this paper, it is not using an instance-based approach, we still want to estimate the function at each point."
+    "This is similar to instance-based methods (you store the data and use at runtime) in ML. For example, in the nearest neighbor model, you store the data and when picking a point, find the 5 nearest neighbors for example. The data itself ARE the parameters of the model. But the parameters do not need to be estimated, they are just given. But this paper is not using an instance-based approach, we still want to estimate the parameter at each point. This is the only way we can make predictions for the parameters not observed."
    ]
   },
   {
@@ -837,23 +837,11 @@
     "$\\rho_m = \\text{argmin}_{\\rho_m} E_{y, x} L(y, F_{m - 1}(x) - \\rho_m g_m(x))$\n",
     "</i>\n",
     "\n",
-    "Here, $\\rho_m$ is calculated with the line search (the naive implementation we did early), but in a package like XGBoost, it's known as the \"eta\" parameter. AFAIK, it's a hyperparameter this is fixed across all \"boosts\". To make this concrete, let's suppose the loss is MSE:\n",
+    "Here, $\\rho_m$ is calculated with the line search (like the naive implementation we did earlier). In a package like XGBoost, it's known as the \"eta\" parameter. AFAIK, it's a hyperparameter this is constant across all \"boosts\".\n",
     "\n",
-    "$L(y, F(x)) = \\frac{1}{2}(y - F(x))^2$\n",
+    "Recall that $E_y [L(y, F(x) | x]$ is $\\int_y L(y, F(x)) P(y | x) dy$. For a given $x$ then, for the true underlying function, what is the probability of y given that x? This must be 1 when y is correct, and 0 otherwise. So this really just picks out $L(y, F(x))$\n",
     "\n",
-    "Taking the partial derivative we get:\n",
-    "\n",
-    "$\\frac{\\partial L(y, F(x))}{\\partial F(x)} = -(y - F(x)) = g(x)$\n",
-    "\n",
-    "So when we add the first part\n",
-    "\n",
-    "$f_0(x) + \\rho_1 (y - f_0(x))$\n",
-    "\n",
-    "and the second part:\n",
-    "\n",
-    "$f_0(x) + \\rho_1 (y - f_0(x)) + \\rho_2 (y - (f_0(x) + f_1(x))$\n",
-    "\n",
-    "SO we keep regressing on the residuals"
+    "TODO: Come back to this"
    ]
   },
   {
@@ -875,13 +863,64 @@
     "$\\{ \\beta_m, a_m\\}_i^M = \\text{argmin}_{\\beta_m, \\alpha_m} \\sum_{i=1}^N L \\big( y_i, \\sum_m \\beta_m h(x_i; a_m) \\big)$\n",
     "</i>\n",
     "\n",
-    "This means we are back to assuming a parameterized model!"
+    "This means we are back to assuming a parameterized model! And the model assumed here, is an additive one. Also, this optimization is done jointly--which gets harder and harder to do as the number of terms grows and the model complexity grows."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0525c29f-2717-453d-a178-a0d902101115",
+   "metadata": {},
+   "source": [
+    "> In situations where this is infeasible one can try a \"greedy-stagewise\" approach. For $m = 1, 2, ..., M$\n",
+    "<br />\n",
+    "$(\\beta_m, \\alpha_m) = argmin_{\\beta, a} \\sum_i^N L(y_i, F_{m-1}(x_i) + \\beta h(x_i; a)$\n",
+    "<br />\n",
+    "and then\n",
+    "<br />\n",
+    "$F_m(x) = F_{m - 1}(x) + \\beta_m h(x; a_m)$\n",
+    "\n",
+    "So the tradeoff here is that we won't in general, obtain the correct solution. By freezing the set of parameters at each 'stage', this means we only have to learn the the weight and parameters of the given booster one at a time. It does make me wonder how much of a tradeoff this is.\n",
+    "\n",
+    "<b>What is the tradeoff from doing a stagewise solution?</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e8bb24e-0fed-4cb9-bdc1-c9721424e5f6",
+   "metadata": {},
+   "source": [
+    "> Note that this stagewise strategy is different from stepwise approaches that readjust previously entered terms when new ones are added. In signal processing this stagewise strategy is called \"matching pursuit\" where L(y, F) is squared-error loss and the $\\{h(x; a_m\\}_1^M$ are called basis functions, usually taken from an over-complete wavelet-like dictionary. In machine learning, (9) (10) is called \"boosting\" where $y \\in \\{-1, 1\\}$ and $L(y, F)$ is either an exponential loss criterion $e^{-yF}$ or negative binomial log-likelihood. The function h(x; a) is called a \"weak learner\" or \"base learner\", and is usually a classification tree.\n",
+    "\n",
+    "The \"matching pursuit\" algorithms arises from the paper <a href=\"https://www.di.ens.fr/~mallat/papiers/MallatPursuit93.pdf\">Matching Pursuits with Time-Frequency Dictionaries</a>. Uforunately, not much more I can say about it at this time.\n",
+    "\n",
+    "I have not studied much on the topic of sparse coding. But here's what I could gather. A vector is represented by a linear combination of a set of basis vectors (in general, no requirement these be orthogonal). When we say basis, what we mean is that each vector is UNIQUELY represented by a set of components (the coefficients in the linear sum of basis vectors). But it seems while mathematically nice, it's not always practical. It turns having the ability to represent a vector in more than one way brings benefits (I cannot articulate why at this time). This means we will need to more atoms than we need. This is where the term \"over-complete dictionary\" comes in. The wavelet refers to the type of $h(x; a)$ model we assume.\n",
+    "\n",
+    "The exponential loss is referring back to the Adaboost paper. Also, $h(x; a)$ is also called a \"booster\" as well."
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "51b68b7d-01b9-4abe-b64b-8352379491b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.10810810810810811"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "fd24b46b-122b-4480-83e9-0d0175edd6e9",
+   "id": "97c56dfc-f95b-424d-9e4d-4b33176c77dc",
    "metadata": {},
    "outputs": [],
    "source": []
